fixed text-align for content, updated responsive sizes media queries

--- a/res/css/otil.css
+++ b/res/css/otil.css
@@ -66,16 +66,19 @@ h3 {
   background-color: white;
   text-align: center;
   padding:20px 80px;
-  text-align: justify;
   margin-bottom: 80px;
 }
 
 .content {
   margin-top: 0px;
-  text-align: justify;
+  text-align: center;
 }
 
-
+.align-left {
+  margin-left: 500px;
+  text-align: left;
+  width: 250px;
+}
 
 .navbar {
   background-color: #eee;
@@ -173,7 +176,10 @@ h3 {
 
 @media screen and (max-width: 1920px) {
   .bgimg-1 {
-    height: 700px;
+    height: 800px;
+  }
+  .caption {
+    margin-top: 70px;
   }
   .heading {
     font-size: 250px;
@@ -198,12 +204,13 @@ h3 {
     font-size: 15px;
   }
   .content {
-    text-align: center;
     font-size: 20px;
   }
   .content-box {
-    text-align: center;
     font-size: 20px;
+  }
+  .align-left {
+  margin-left: 780px;
   }
   .nav {
     font-size: 18px;
@@ -212,6 +219,9 @@ h3 {
 @media screen and (max-width: 1366px) {
   .bgimg-1 {
     height: 650px;
+  }
+  .caption {
+    margin-top: 30px;
   }
   .heading {
     font-size: 200px;
@@ -225,6 +235,7 @@ h3 {
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 25px;
+    margin-top: 40px;
   }
   .caption span {
     margin-bottom: 5px;
@@ -236,11 +247,12 @@ h3 {
     font-size: 12px;
   }
   .content {
-    text-align: left;
     font-size: 15px;
   }
+  .align-left {
+  margin-left: 510px;
+  }
   .content-box {
-    text-align: left;
     font-size: 15px;
   }
   .nav {
@@ -250,6 +262,9 @@ h3 {
 @media screen and (max-width: 1280px) {
   .bgimg-1 {
     height: 600px;
+  }
+  .caption {
+    margin-top: 30px;
   }
   .heading {
     font-size: 200px;
@@ -263,6 +278,7 @@ h3 {
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 20px;
+    margin-top: 40px;
   }
   
   .social-btn {
@@ -272,12 +288,13 @@ h3 {
     font-size: 12px;
   }
   .content {
-    text-align: left;
     font-size: 15px;
   }
   .content-box {
-    text-align: left;
     font-size: 15px;
+  }
+  .align-left {
+    margin-left: 320px;
   }
   .nav {
     font-size: 12px;
@@ -285,7 +302,10 @@ h3 {
 } 
 @media screen and (max-width: 1024px) {
   .bgimg-1 {
-    height: 550px;
+    height: 540px;
+  }
+  .caption {
+    margin-top: 50px;
   }
   .heading {
     font-size: 140px;
@@ -299,7 +319,7 @@ h3 {
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 20px;
-    margin-top: 20px;
+    margin-top: 30px;
   }
   
   .social-btn {
@@ -309,12 +329,13 @@ h3 {
     font-size: 10px;
   }
   .content {
-    text-align: left;
     font-size: 15px;
   }
   .content-box {
-    text-align: left;
     font-size: 15px;
+  }
+  .align-left {
+    margin-left: 340px;
   }
   .nav {
     font-size: 12px;
@@ -322,7 +343,7 @@ h3 {
 } 
 @media screen and (max-width: 980px) {
   .bgimg-1 {
-    height: 500px;
+    height: 550px;
   }
   .heading {
     font-size: 150px;
@@ -345,12 +366,13 @@ h3 {
     font-size: 12px;
   }
   .content {
-    text-align: left;
     font-size: 15px;
   }
   .content-box {
-    text-align: left;
     font-size: 15px;
+  }
+  .align-left {
+    margin-left: 320px;
   }
   .nav {
     font-size: 12px;
@@ -359,6 +381,9 @@ h3 {
 @media screen and (max-width: 800px) {
   .bgimg-1 {
     height: 550px;
+  }
+  .caption {
+    margin-top: 90px;
   }
   .heading {
     font-size: 120px;
@@ -372,7 +397,7 @@ h3 {
     padding-top: 8px;
     padding-bottom: 8px;
     font-size: 18px;
-    margin-top: 20px;
+    margin-top: 30px;
   }
   
   .social-btn {
@@ -382,15 +407,16 @@ h3 {
     font-size: 10px;
   }
   .content {
-    text-align: left;
     font-size: 15px;
   }
   .content-box {
-    text-align: left;
     font-size: 15px;
   }
+  .align-left {
+    margin-left: 220px;
+  }
   .nav {
-    font-size: 18px;
+    font-size: 15px;
   }
 } 
 @media screen and (max-width: 350px) {
@@ -426,14 +452,33 @@ h3 {
     font-size: 10px;
   }
   .content {
-    text-align: left;
     font-size: 12px;
   }
   .content-box {
-    text-align: left;
     font-size: 12px;
   }
+  .align-left {
+    margin-left: 0px;
+  }
+  .go-to-top {
+    display: none;
+  }
+  .hide {
+    display: none;
+  }
+  .glyphicon {
+    display: none;
+  }
+  .glyphicon-arrow-up { 
+    display: none;
+  }
   .nav {
-    font-size: 13px;
+    font-size: 11px;
+  }
+  .navbar-nav {
+    margin-left: 0px;
+  }
+  #functionality  {
+    padding-left: 50px;
   }
 } 
